--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,9 +52,7 @@ jobs:
               run: bun install --frozen-lockfile
 
             - name: Build executable
-              # Assumes your main entry file is src/index.ts
-              # The output file will be named after matrix.target.name
-              run: bun build ./src/index.ts --compile --target ${{ matrix.target.bun_target }} --outfile ${{ matrix.target.name }}
+              run: bun build ./src/index.tsx --compile --target ${{ matrix.target.bun_target }} --outfile ${{ matrix.target.name }}
 
             - name: Prepare artifact for Windows
               if: matrix.target.os == 'windows-latest'
