--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "woodottranslate",
+  "version": "1.0.0",
   "module": "src/index.tsx",
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "bun run --watch src/index.tsx",
-    "build": "bun build ./src/index.tsx --outdir dist",
-    "build:macos-arm64": "bun build --compile ./src/index.tsx --target=bun-darwin-arm64 --outfile dist/app-macos-arm64",
-    "build:macos-x64": "bun build --compile ./src/index.tsx --target=bun-darwin-x64 --outfile dist/app-macos-x64",
-    "build:windows": "bun build --compile ./src/index.tsx --target=bun-windows-x64 --outfile dist/app-windows.exe",
-    "build:linux-x64": "bun build --compile ./src/index.tsx --target=bun-linux-x64 --outfile dist/app-linux-x64",
-    "build:linux-arm64": "bun build --compile ./src/index.tsx --target=bun-linux-arm64 --outfile dist/app-linux-arm64"
+    "dev": "bun run src/utils/generate-version.ts && bun run --watch src/index.tsx",
+    "build": "bun run src/utils/generate-version.ts && bun build ./src/index.tsx --outdir dist",
+    "build:macos-arm64": "bun run src/utils/generate-version.ts && bun build --compile ./src/index.tsx --target=bun-darwin-arm64 --outfile dist/app-macos-arm64",
+    "build:macos-x64": "bun run src/utils/generate-version.ts && bun build --compile ./src/index.tsx --target=bun-darwin-x64 --outfile dist/app-macos-x64",
+    "build:windows": "bun run src/utils/generate-version.ts && bun build --compile ./src/index.tsx --target=bun-windows-x64 --outfile dist/app-windows.exe",
+    "build:linux-x64": "bun run src/utils/generate-version.ts && bun build --compile ./src/index.tsx --target=bun-linux-x64 --outfile dist/app-linux-x64",
+    "build:linux-arm64": "bun run src/utils/generate-version.ts && bun build --compile ./src/index.tsx --target=bun-linux-arm64 --outfile dist/app-linux-arm64"
   },
   "devDependencies": {
     "@types/bun": "latest",
